--- a/Repositorio.Entidades/Repositorio.Entidades.csproj
+++ b/Repositorio.Entidades/Repositorio.Entidades.csproj
@@ -42,6 +42,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Estado.cs" />
     <Compile Include="Pais.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
