--- a/Repositorio.DALL/Repositorio.DALL.csproj
+++ b/Repositorio.DALL/Repositorio.DALL.csproj
@@ -57,10 +57,15 @@
     <Compile Include="Migrations\201707062220027_inicio.Designer.cs">
       <DependentUpon>201707062220027_inicio.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201707072054435_add-cidade.cs" />
+    <Compile Include="Migrations\201707072054435_add-cidade.Designer.cs">
+      <DependentUpon>201707072054435_add-cidade.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Repositorios\Base\IRepositorio.cs" />
     <Compile Include="Repositorios\Base\Repositorio.cs" />
+    <Compile Include="Repositorios\CidadeRepositorio.cs" />
     <Compile Include="Repositorios\EstadoRepositorio.cs" />
     <Compile Include="Repositorios\PaisRepositorio.cs" />
   </ItemGroup>
@@ -77,6 +82,9 @@
   <ItemGroup>
     <EmbeddedResource Include="Migrations\201707062220027_inicio.resx">
       <DependentUpon>201707062220027_inicio.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201707072054435_add-cidade.resx">
+      <DependentUpon>201707072054435_add-cidade.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
