--- a/Repositorio.Entidades/Repositorio.Entidades.csproj
+++ b/Repositorio.Entidades/Repositorio.Entidades.csproj
@@ -42,8 +42,9 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Estado.cs" />
-    <Compile Include="Pais.cs" />
+    <Compile Include="A23.cs" />
+    <Compile Include="A22.cs" />
+    <Compile Include="A24.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
