--- a/Apresentacao/Apresentacao.csproj
+++ b/Apresentacao/Apresentacao.csproj
@@ -78,6 +78,7 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Util.cs" />
     <Compile Include="Validacao.cs" />
     <EmbeddedResource Include="FormA22Cadastro.resx">
       <DependentUpon>FormA22Cadastro.cs</DependentUpon>
