--- a/Apresentacao/Apresentacao.csproj
+++ b/Apresentacao/Apresentacao.csproj
@@ -76,6 +76,13 @@
     <Compile Include="FormMestre.Designer.cs">
       <DependentUpon>FormMestre.cs</DependentUpon>
     </Compile>
+    <Compile Include="FormPesquisa.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="FormPesquisa.Designer.cs">
+      <DependentUpon>FormPesquisa.cs</DependentUpon>
+    </Compile>
+    <Compile Include="PreencheComboBox.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Util.cs" />
@@ -88,6 +95,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="FormMestre.resx">
       <DependentUpon>FormMestre.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="FormPesquisa.resx">
+      <DependentUpon>FormPesquisa.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
