--- a/Repositorio.DALL/Repositorio.DALL.csproj
+++ b/Repositorio.DALL/Repositorio.DALL.csproj
@@ -61,6 +61,14 @@
     <Compile Include="Migrations\201707072054435_add-cidade.Designer.cs">
       <DependentUpon>201707072054435_add-cidade.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201707101940525_ALTERAÇÕES-MODEL-A22.cs" />
+    <Compile Include="Migrations\201707101940525_ALTERAÇÕES-MODEL-A22.Designer.cs">
+      <DependentUpon>201707101940525_ALTERAÇÕES-MODEL-A22.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201707111937374_REFATORAÇÃO-MODEL-A22-A23-A24.cs" />
+    <Compile Include="Migrations\201707111937374_REFATORAÇÃO-MODEL-A22-A23-A24.Designer.cs">
+      <DependentUpon>201707111937374_REFATORAÇÃO-MODEL-A22-A23-A24.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Repositorios\Base\IRepositorio.cs" />
@@ -85,6 +93,12 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\201707072054435_add-cidade.resx">
       <DependentUpon>201707072054435_add-cidade.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201707101940525_ALTERAÇÕES-MODEL-A22.resx">
+      <DependentUpon>201707101940525_ALTERAÇÕES-MODEL-A22.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201707111937374_REFATORAÇÃO-MODEL-A22-A23-A24.resx">
+      <DependentUpon>201707111937374_REFATORAÇÃO-MODEL-A22-A23-A24.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
