--- a/Repositorio.DALL/Repositorio.DALL.csproj
+++ b/Repositorio.DALL/Repositorio.DALL.csproj
@@ -44,6 +44,7 @@
     <Reference Include="System.Data.Entity" />
     <Reference Include="System.Data.Entity.Design" />
     <Reference Include="System.Data.Linq" />
+    <Reference Include="System.Windows.Forms" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
@@ -69,10 +70,19 @@
     <Compile Include="Migrations\201707111937374_REFATORAÇÃO-MODEL-A22-A23-A24.Designer.cs">
       <DependentUpon>201707111937374_REFATORAÇÃO-MODEL-A22-A23-A24.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201707212019145_tabela-cep.cs" />
+    <Compile Include="Migrations\201707212019145_tabela-cep.Designer.cs">
+      <DependentUpon>201707212019145_tabela-cep.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201707212021296_table-cep.cs" />
+    <Compile Include="Migrations\201707212021296_table-cep.Designer.cs">
+      <DependentUpon>201707212021296_table-cep.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Repositorios\Base\IRepositorio.cs" />
     <Compile Include="Repositorios\Base\Repositorio.cs" />
+    <Compile Include="Repositorios\CepRepositorio.cs" />
     <Compile Include="Repositorios\CidadeRepositorio.cs" />
     <Compile Include="Repositorios\EstadoRepositorio.cs" />
     <Compile Include="Repositorios\PaisRepositorio.cs" />
@@ -99,6 +109,12 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\201707111937374_REFATORAÇÃO-MODEL-A22-A23-A24.resx">
       <DependentUpon>201707111937374_REFATORAÇÃO-MODEL-A22-A23-A24.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201707212019145_tabela-cep.resx">
+      <DependentUpon>201707212019145_tabela-cep.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201707212021296_table-cep.resx">
+      <DependentUpon>201707212021296_table-cep.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
