--- a/Repositorio.Entidades/Repositorio.Entidades.csproj
+++ b/Repositorio.Entidades/Repositorio.Entidades.csproj
@@ -45,6 +45,7 @@
     <Compile Include="A23.cs" />
     <Compile Include="A22.cs" />
     <Compile Include="A24.cs" />
+    <Compile Include="A25.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
