--- a/Apresentacao/Apresentacao.csproj
+++ b/Apresentacao/Apresentacao.csproj
@@ -156,9 +156,13 @@
     <Content Include="Imagens\Down 2_25px.png" />
     <Content Include="Imagens\Down 3_25px.png" />
     <Content Include="Imagens\Edit Property_15px.png" />
+    <None Include="Imagens\edit_15px.png" />
     <Content Include="Imagens\Edit_25px.png" />
     <None Include="Imagens\Microsoft Excel_25px.png" />
     <None Include="Imagens\Upload_25px.png" />
+    <None Include="Imagens\trash_15px.png" />
+    <None Include="Imagens\search_15px.png" />
+    <None Include="Imagens\plus_15px.png" />
     <Content Include="jmti.ico" />
     <None Include="Imagens\right_round_25px.png" />
     <None Include="Imagens\left_round_25px.png" />
