--- a/Repositorio.Entidades/Repositorio.Entidades.csproj
+++ b/Repositorio.Entidades/Repositorio.Entidades.csproj
@@ -43,7 +43,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="A23.cs" />
-    <Compile Include="A22.cs" />
+    <Compile Include="Pais.cs" />
     <Compile Include="A24.cs" />
     <Compile Include="A25.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
